--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,10 @@
   width: 100%
 }
 
-#baseMaps {
-  'color: gray'
-}
+/*#baseMaps {
+  'color: gray';
+}*/
+
+/*.leaflet-control-layers-toggle {
+
+}*/
