--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,13 @@
-#mapid {height: 300px;}
+#mapid {  
+	height: 560px;
+    width: 80%;
+    display: inline-block;
+}
+
+
+#panel {
+    width: 16%;
+    padding: 20px;
+    display: inline-block;
+    vertical-align: top;
+}
