--- a/css/style.css
+++ b/css/style.css
@@ -12,13 +12,37 @@
     vertical-align: top;
 }
 
+#mapinfo {
+	height: 1500px;
+	position: absolute;
+	top: 660px;
+	left: 20px;
+	margin: 0 300px 0 300px;
+}
+
+#subamphibians {
+	font-size: 1em;
+	padding-left:50px;
+}
+
+h1 {
+	text-align: center;
+}
+
+p {
+	font-size: 1em;
+	text-indent:50px;
+}
+
+h3 {
+	font-size: 1.25em;
+}
+
+
 /*#baseMaps {
   'color: gray';
 }*/
 
 /*.leaflet-control-layers-toggle {
 
-}*/
-
-/*#mapinfo {
 }*/
