--- a/css/style.css
+++ b/css/style.css
@@ -81,3 +81,16 @@ h3 {
   line-height: 23px;
   letter-spacing: 1px;
 }
+
+h4 {
+  font-size: 1em;
+  font-family: 'Roboto', sans-serif;
+  line-height: 16px;
+}
+
+h5 {
+  font-family: 'Roboto', sans-serif;
+  font-size: 1.25em;
+  letter-spacing: 1px;
+  line-height: 16px;
+}
