--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@
 
 #controls {
 	position: absolute;
-	top: 100px;
+	top: 110px;
 	left: 50px;
 	width: 250px;
 }
@@ -49,7 +49,6 @@
 h1 {
 	text-align: center;
   font-family: 'Alegreya', serif;
-  line-height: 46px;
   font-size: 40px;
 }
 
@@ -87,4 +86,12 @@ h5 {
   font-size: 1.25em;
   letter-spacing: 1px;
   line-height: 16px;
+}
+
+h6 {
+  text-align: center;
+  font-family: 'Roboto', sans-serif;
+  font-size: 1em;
+  letter-spacing: 1px;
+  font-style: normal;
 }
